Fix project thumbnail display on mobile

--- a/dual.css
+++ b/dual.css
@@ -1531,6 +1531,7 @@ nav a{
   .project-image{
     width:100%;
     height:auto;
+    object-fit: contain;
   }
 
   .project-overlay{
@@ -1556,7 +1557,7 @@ nav a{
     }
     .project-image{
       height:350px;
-      object-fit: cover;
+      object-fit: contain;
     }
   }
 
